[gd_scene load_steps=2 format=3]

[ext_resource type="Script" path="res://scripts/minigames/block_breaker.gd" id="1_script"]

[node name="BlockBreaker" type="Node"]
script = ExtResource("1_script")

[node name="Background" type="ColorRect" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.05, 0.05, 0.12, 1)

[node name="MarginContainer" type="MarginContainer" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 20
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 20
theme_override_constants/margin_bottom = 10

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2

[node name="TopRow" type="HBoxContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="TitleLabel" type="Label" parent="MarginContainer/VBoxContainer/TopRow"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
text = "BLOCK BREAKER"
horizontal_alignment = 1

[node name="CountdownLabel" type="Label" parent="MarginContainer/VBoxContainer/TopRow"]
unique_name_in_owner = true
layout_mode = 2
text = "3"
horizontal_alignment = 1

[node name="TimerLabel" type="Label" parent="MarginContainer/VBoxContainer/TopRow"]
unique_name_in_owner = true
layout_mode = 2
text = "Time: 10.0"
horizontal_alignment = 2

[node name="Spacer1" type="Control" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
custom_minimum_size = Vector2(0, 5)

[node name="ScoreLabel" type="Label" parent="MarginContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "Blocks: 0 / 20"
horizontal_alignment = 1

[node name="Spacer2" type="Control" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
custom_minimum_size = Vector2(0, 5)

[node name="PlayArea" type="Control" parent="MarginContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_vertical = 3
custom_minimum_size = Vector2(0, 300)

[node name="FeedbackLabel" type="Label" parent="MarginContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
text = ""
horizontal_alignment = 1
